# Asteroids

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Asteroids/Headers/: asteroid.hpp  camera.hpp  collision.hpp  game.hpp  glitter.hpp  main.hpp  mesh.hpp  model.hpp  projectile.hpp  shader.hpp  spaceShip.hpp  textRender.hpp  textRenderer.hpp  texture.hpp
Asteroids/Objects/asteroid/: asteroid.mtl  asteroid1.mtl
Asteroids/Objects/projectile/: projectile.mtl
Asteroids/Shaders/: asteroid.vs  model.vs  space_ship.fs  space_ship.vs
Asteroids/Sources/: asteroid.cpp  collison.cpp  game.cpp  main.cpp  mesh.cpp  model.cpp  projectile.cpp  shader.cpp  spaceShip.cpp  textRenderer.cpp  texture.cpp
